--- a/Java Plugins/001 Simple Hello World/build.gradle
+++ b/Java Plugins/001 Simple Hello World/build.gradle
@@ -1,14 +1,15 @@
-group 'com.example.platestack'
-version '0.1.0-SNAPSHOT'
+group 'com.example.platestack' // Change to YOUR group
+version '0.1.0-SNAPSHOT' // The default version '1.0-SNAPSHOT' is NOT Okay! The version must have tree numbers
+                         // Check http://semver.org/spec/v2.0.0.html for more details and follow that rules.
 
-apply plugin: 'java'
+apply plugin: 'java' // You are writing  a java plugin...
 
 repositories {
-    jcenter()
-    maven { url 'http://dl.bintray.com/kotlin/kotlinx' }
-    maven { url 'https://jitpack.io' }
+    jcenter() // Most dependencies are there
+    maven { url 'http://dl.bintray.com/kotlin/kotlinx' } // Necessary to interact with immutable collections
+    maven { url 'https://jitpack.io' } // Who needs a maven repository when we have jitpack and a github repository? :)
 }
 
 dependencies {
-    compile 'com.github.PlateStack:PlateAPI:-SNAPSHOT'
+    compile 'com.github.PlateStack:PlateAPI:-SNAPSHOT' // All necessary dependencies will be grabbed automatically
 }
