--- a/Kotlin Plugins/001 Simple Hello World/build.gradle
+++ b/Kotlin Plugins/001 Simple Hello World/build.gradle
@@ -1,13 +1,21 @@
 group 'com.example.platestack'
 version '0.1.0-SNAPSHOT'
 
+// You need to specify this buildscript otherwise the "apply plugin: 'kotlin'" will not work
 buildscript {
-    ext.kotlin_version = '1.1.2-4'
+    ext.kotlin_version = '1.1.2-4' // Make sure to match the same version as the API
 
     repositories {
-        jcenter()
+        jcenter() // This is necessary for the classpath bellow
     }
+
     dependencies {
+        // Includes the Kotlin plugin in the classpath
+
+        // If a warning appears here saying that the Kotlin version that is used for building differs
+        // from the IDE plugin, just ignore it or suppress it or disable this check.
+
+        //noinspection DifferentKotlinGradleVersion
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -15,11 +23,17 @@ buildscript {
 apply plugin: 'kotlin'
 
 repositories {
-    jcenter()
-    maven { url 'http://dl.bintray.com/kotlin/kotlinx' }
-    maven { url 'https://jitpack.io' }
+    jcenter() // Most dependencies are there
+    maven { url 'http://dl.bintray.com/kotlin/kotlinx' } // Necessary to interact with immutable collections
+    maven { url 'https://jitpack.io' } // Who needs a maven repository when we have jitpack and a github repository? :)
 }
 
 dependencies {
-    compile 'com.github.PlateStack:PlateAPI:-SNAPSHOT'
+    compile 'com.github.PlateStack:PlateAPI:-SNAPSHOT' // All necessary dependencies will be grabbed automatically
+
+    // You don't need to add a compile dependency to the kotlin-std lib, it is already required by the PlateAPI
+    // and it will be bundled by the PlateStack implementation, so you don't need to do that either.
+
+    // Just make sure that the ext.kotlin_version line is pointing to the same version as the PlateAPI's Kotlin version
+    // and everything will be fine.
 }
