--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,13 @@
 rootProject.name = 'CleanDishes'
-include ':Java Plugins:001 Simple Hello World'
-include ':Kotlin Plugins:001 Simple Hello World'
+
+includeRenamed '001 Simple Hello World:Java'
+includeRenamed '001 Simple Hello World:Kotlin'
+includeRenamed '001 Simple Hello World:Scala:SBT'
+includeRenamed '002 MavenPlugin:Kotlin'
+
+def includeRenamed(String path) {
+    include(path)
+    def proj = project(":$path")
+    def parts = proj.path.substring(1).split(":")
+    proj.name = parts.join(" - ")
+}
