Fix interference in Scala Gradle's configuration

--- a/001 Simple Hello World/Scala/build.gradle
+++ b/001 Simple Hello World/Scala/build.gradle
@@ -1,29 +1,31 @@
 subprojects {
-    buildDir = buildDir.parentFile.toPath().resolve("target").resolve("gradle").toFile()
+    if(projectDir.name != 'Gradle') {
+        buildDir = buildDir.parentFile.toPath().resolve("target").resolve("gradle").toFile()
 
-    apply plugin: 'scala'
+        apply plugin: 'scala'
 
-    ext.scala_version = '2.12.2'
+        ext.scala_version = '2.12.2'
 
-    repositories {
-        jcenter()
-        maven { url 'http://dl.bintray.com/kotlin/kotlinx' }
-        maven { url 'https://jitpack.io' }
-    }
+        repositories {
+            jcenter()
+            maven { url 'http://dl.bintray.com/kotlin/kotlinx' }
+            maven { url 'https://jitpack.io' }
+        }
 
-    configurations {
-        scalaCompiler
-    }
+        configurations {
+            scalaCompiler
+        }
 
-    dependencies {
-        scalaCompiler "org.scala-lang:scala-compiler:$scala_version"
-        scalaCompiler "org.scala-lang:scala-library:$scala_version"
-        scalaCompiler "org.scala-lang:scala-reflect:$scala_version"
+        dependencies {
+            scalaCompiler "org.scala-lang:scala-compiler:$scala_version"
+            scalaCompiler "org.scala-lang:scala-library:$scala_version"
+            scalaCompiler "org.scala-lang:scala-reflect:$scala_version"
 
-        compile 'com.github.PlateStack:PlateAPI:-SNAPSHOT'
-    }
+            compile 'com.github.PlateStack:PlateAPI:-SNAPSHOT'
+        }
 
-    tasks.withType(ScalaCompile) {
-        scalaClasspath = configurations.scalaCompiler
+        tasks.withType(ScalaCompile) {
+            scalaClasspath = configurations.scalaCompiler
+        }
     }
 }
