--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,7 @@ includeRenamed '001 Simple Hello World:Java'
 includeRenamed '001 Simple Hello World:Kotlin'
 includeRenamed '001 Simple Hello World:Scala:SBT'
 includeRenamed '001 Simple Hello World:Scala:Gradle'
+includeRenamed '002 MavenPlugin:Java'
 includeRenamed '002 MavenPlugin:Kotlin'
 
 def includeRenamed(String path) {
