--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,7 @@ includeRenamed '001 Simple Hello World:Scala:SBT'
 includeRenamed '001 Simple Hello World:Scala:Gradle'
 includeRenamed '002 MavenPlugin:Java'
 includeRenamed '002 MavenPlugin:Kotlin'
+includeRenamed '002 MavenPlugin:Scala'
 
 def includeRenamed(String path) {
     include(path)
