--- a/001 Simple Hello World/Groovy/build.gradle
+++ b/001 Simple Hello World/Groovy/build.gradle
@@ -12,5 +12,5 @@ repositories {
 
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.4.11'
-    compile 'com.github.PlateStack:PlateAPI:-SNAPSHOT' // All necessary dependencies will be grabbed automatically
+    compile 'com.github.PlateStack:PlateAPI:a50fd1d41e' // All necessary dependencies will be grabbed automatically
 }
