--- a/002 MavenPlugin/build.gradle
+++ b/002 MavenPlugin/build.gradle
@@ -40,6 +40,6 @@ subprojects {
     }
 
     dependencies {
-        compile 'com.github.PlateStack:PlateAPI:-SNAPSHOT'
+        compile 'com.github.PlateStack:PlateAPI:a50fd1d41e'
     }
 }
