Simplify the ceylon example

--- a/001 Simple Hello World/Ceylon/.ceylon/config
+++ b/001 Simple Hello World/Ceylon/.ceylon/config
@@ -7,9 +7,9 @@ source=source
 [defaults]
 offline=false
 flatclasspath=false
-autoexportmavendependencies=false
-fullyexportmavendependencies=false
-overrides=overrides.xml
+autoexportmavendependencies=true
+fullyexportmavendependencies=true
+overrides=
 
 
 [repositories]
