--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-gradlew           linguist-generated
-gradlew.bat       linguist-generated
-ceylonb           linguist-generated
-ceylonb.bat       linguist-generated
+gradlew           linguist-vendored=true
+gradlew.bat       linguist-vendored=true
+ceylonb           linguist-vendored=true
+ceylonb.bat       linguist-vendored=true
